[SslPeerCertificatesChainTest] simplify chain api